increased vh on fixed background in hopes it will account for minor gap when scrolling on Safari

--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -182,7 +182,7 @@ background / loses its fixed effect.  */
   background-image: url("../images/bg8.gif");
   background-size: cover;
   width: 100vw;
-  height: 120vh;
+  height: 135vh;
   overflow: hidden;
 }
 
